# RAscoreNN

./: README.md  setup.cfg
RAscore/: RAscore_NN.py  command_line_interface.py
tests/: test_load.py
