[metadata]
name = RAscoreNN
version = 2021.03
description = Retrosynthetic Accessibility (RA) score learned from computer aided synthesis planning
long_description = file: README.md
url = https://github.com/mathcom/RAscoreNN
download_url = https://github.com/mathcom/RAscoreNN
author = Reymond Group/Molecular AI AstraZeneca
author_email = amol.thakkar@dcb.unibe.ch
license = MIT
license_file = LICENSE

[options]
zip_safe = False
install_requires =
    h5py
    click
    tqdm
    tensorflow-cpu == 2.6.2
    setuptools-git
packages = find:
include_package_data = True
python_requires = >=3.7

[options.entry_points]
console_scripts =
    RAscore = RAscore.command_line_interface:main

[options.extras_require]
retraining =
    matplotlib
    ModifiedNB
    numpy
    optuna
    pandas
    scipy
    seaborn
    swifter
    tables
